--- a/docs/handson/H3-FAIRdata.ipynb
+++ b/docs/handson/H3-FAIRdata.ipynb
@@ -7,145 +7,143 @@
    "source": [
     "# FAIRly share your data and code \n",
     "\n",
-    "<!-- **2023.03.07, 2023.03.14, 2023.03.21** -->\n",
-    "**2024.10.01, 2024.10.15, 2024.10.22**\n",
+    "This tutorial will show you how to code with Git and GitHub as preparation for the next hands-on practice. We will also introduce some FAIR-compliant data repositories and explore how they work. \n",
     "\n",
-    "## Goals\n",
+    "## 1 | Git\n",
     "\n",
-    "1. Understand how to archive data on Zenodo and make them FAIR-compatible.\n",
-    "2. Create a repository on Github and archive the content (which can be data or code) on Zenodo automatically whenever there is a release.\n",
+    "Git is an open-source, distributed **version control system**, which means it can manage a project between different versions for speedy and collaborative development. \n",
     "\n",
-    "## [Zenodo](https://zenodo.org/)\n",
+    "### 🛠️ Clone a GitHub repository to your working environment\n",
     "\n",
-    "![Zenodo](https://upload.wikimedia.org/wikipedia/commons/0/0f/Zenodo_logo.jpg)\n",
-    "By CERN Data Centre & Invenio, [CC-BY 4.0](http://creativecommons.org/licenses/by/4.0/)\n",
+    "🚩 **Task:** Go to your [Github](https://github.com/) repository page you created from the last hands-on session. It has this URL convention: `https://github.com/[your_ID]/[your_repository_name]`. Click the green `Code` button to show the clone path. To start simply, we use the HTTPS version with the following naming convention: `https://github.com/[your_ID]/[your_repository_name].git`. We will use this path in the next task.\n",
     "\n",
-    "Zenodo is an open repository aiming for hosting all kinds of research materials, including but not limited to data, code, images, presentations, papers, and documentation. Zenodo is operated by [CERN](https://home.cern/) under the EU/EC [OpenAIRE program](https://www.openaire.eu/).\n",
+    "![Github-scr11](figs/Github-scr11.png)\n",
     "\n",
-    "## Goal 1 procedure\n",
-    "\n",
-    "### Register a Zenodo account \n",
-    "\n",
-    "You can use your Github/ORCID to register a Zenodo account if you have one or are creating one. [What is ORCID?](https://www.youtube.com/watch?v=a1Rijk_TMHA)\n",
-    "\n",
-    "(We'll ask to to create a Github account later during this session.)\n",
-    "\n",
-    "### Attempt to create an Upload \n",
-    "\n",
-    "During the upload, you'll also be asked to provide a license (if for open access) and deal with a DOI.\n",
-    "\n",
-    "A license can be given in two ways:\n",
-    "1. By choosing one in the dropdown menu\n",
-    "2. By including a license file in the uploaded zip file.\n",
-    "\n",
-    "Typically we want a new DOI to be associated with the new upload unless there has been other DOI issued to you. If you want to get the DOI before finalizing and publishing the upload, you can choose the \"reserve DOI\" option. **DOI registration is permanent!** You cannot remove/delete a DOI once it is given to your submission. I'll let you decide whether you try this functionaility or not during this session.\n",
-    "\n",
-    "If you have companian material (such as a journal paper or a conference presentation), you can fill in the related/alternate identifiers to link the upload to the companians.\n",
-    "\n",
-    "Don't forget to prepare the other metadata as much complete as possible! This determines how easy the upload to be reused by other people. \n",
-    "\n",
-    "\n",
-    "## [Github](https://github.com/)\n",
-    "\n",
-    "![Github](https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Font_Awesome_5_brands_github.svg/232px-Font_Awesome_5_brands_github.svg.png)\n",
-    "Github icon By Font Awesome, [CC-BY 4.0](http://creativecommons.org/licenses/by/4.0/)\n",
-    "\n",
-    "Github is an online hosing service for software, code, and documentation using Git as the tool of version control. You don't need to install Git to use Github, and vise versa. However, **I recommend that you use Git along with Github** for a good integration of the data science ecosystem.\n",
-    "\n",
-    "## Goal 2 procedure\n",
-    "\n",
-    "We assume you already have a Github account. If not, it won't take much time to register one 🙂\n",
-    "\n",
-    "### Create a Github repository\n",
-    "\n",
-    "On Github, go to \"Your repositories\" and you'll see the page as below. Click the green button saying \"New.\"\n",
-    "\n",
-    "![Github-scr1](figs/Github-scr1.png)\n",
-    "\n",
-    "If you have decided a license you are going to use for this repository, you can choose it from the drop-down menu here. Otherwise, you can leave it blank and specify the license later. Any material without a given license is completely copyrighted. \n",
-    "\n",
-    "If you are new to Git/Github, you can also skip the `Add .gitignore` section. \n",
-    "\n",
-    "After you create a new repository, you can try to add any content using the interface provided by Github (e.g., the \"Add file\" button).\n",
-    "\n",
-    "### Clone this Github repository to your local machine\n",
-    "\n",
-    "Remember that we will use the [Callysto Hub](https://hub.callysto.ca/) as the local machine, although it's technically on the cloud. \n",
-    "\n",
-    "Once you log into the Callysto Hub, change the URL from https://hub-xx.callysto.ca/jupyter/user/xxx..../tree to https://hub-xx.callysto.ca/jupyter/user/xxx..../lab for the JupyterLab GUI. Click the blue buttom with a plus sign on it to open the launcher page.\n",
+    "🚩 **Task:** Log into [Callysto Hub](https://hub.callysto.ca/) (or other other working environment you prefer). Open a terminal window. The figure below shows how to open it using the [JupyterLab interface](https://whyjz.github.io/ncu-open-science/handson/H1-Jupyter.html#try-callysto). (The blue button with a plus sign in the figure opens the launcher page.)\n",
     "\n",
     "![CallystoHub-scr1](figs/CallystoHub-scr1.png)\n",
     "\n",
-    "Initiate a terminal session by clicking the terminal icon on the launcher page. New you can clone the repository we just created on Callysto using the following command-line prompt:\n",
+    "🚩 **Task:** On the terminal window, clone the target GitHub repository:\n",
     "\n",
-    "`git clone https://github.com/YOUR-ID/YOUR-REPO-NAME.git`\n",
+    "`git clone https://github.com/[your_ID]/[your_repository_name].git`\n",
     "\n",
-    "**You have to change** `YOUR-ID` **to your Github user name and** `YOUR-REPO-NAME` **to the repositry name you want to be cloned.** Once done, you should see a new folder in the left sidebar (file browser) that shows the repository name. Now you have copied the content from Github to Callysto and can continue to add new content on Callysto.\n",
+    "Once done, you should see a new folder in the left panel (file browser) that shows the repository name. You have now copied and linked the repository content from GitHub to Callysto Hub.\n",
     "\n",
-    "### Make commits and push them to Github\n",
+    "❓ **Question:** After you have cloned the repository, navigate (`cd`) to the repository folder and enter the prompt `git status`. What does the resulting message mean? \n",
     "\n",
-    "Once you have new content in the repository, it is time to tell Git to track the change. This is an action called a \"commit.\" \n",
+    "### 🛠️ Make commits\n",
     "\n",
-    "To commit the first time on a machine, you'll need to configure the following information: \n",
+    "Once you have new content in the repository, we can tell Git to track the change. This is an action called a \"commit.\" \n",
     "\n",
-    "````{margin}\n",
-    "```{note}\n",
-    "The third line of the code is actually optional since it just specifies the preferred text editor \"nano\" for commits. If a text editor is not specified, Git will use the system default (which is `vim` on Callysto).\n",
+    "🚩 **Task:** Create a Notebook file called `commit_test.ipynb` and add the following content to a markdown cell:\n",
+    "\n",
     "```\n",
-    "````\n",
+    "# Title\n",
+    "## Section 1\n",
+    "## Section 2\n",
+    "### Section 2.1\n",
+    "```\n",
     "\n",
+    "🚩 **Task:** If this is your first time committing a change in a new working environment, you will need to configure the following information prior to a commit:\n",
     "```\n",
     "git config --global user.name \"YOUR NAME\"\n",
     "git config --global user.email \"YOUR.EMAIL@some.domain.edu\"\n",
     "git config --global core.editor \"nano\"\n",
     "```\n",
     "\n",
-    "Now you can commit new content by the following commands: (Make sure your terminal is at the right path before doing this!) \n",
+    "````{margin}\n",
+    "```{note}\n",
+    "The third line of the code is optional for the later steps since it just specifies the preferred text editor \"nano\" for commits. If a text editor is not specified, Git will use the system default (which is `vim` on Callysto).\n",
+    "```\n",
+    "````\n",
+    "\n",
+    "❓ **Question:** Enter the prompt `git status`. What does the resulting message mean? \n",
+    "\n",
+    "🚩 **Task:** Stage new content by the following command for a commit: (Make sure your terminal is at the root directory of the repository before doing this!) \n",
     "```\n",
     "git add .\n",
+    "```\n",
+    "❓ **Question:** Enter the prompt `git status`. What does the resulting message mean? \n",
+    "\n",
+    "🚩 **Task:** Commit new content by the following command:\n",
+    "```\n",
     "git commit\n",
     "```\n",
     "\n",
-    "If you want to update the remote repository with the new changes (aka to \"Push\"), you have to [create a Github personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token#creating-a-personal-access-token-classic) for security purposes. Once you have it, type the command below in the terminal:\n",
+    "### 🛠️ Push the changes to GitHub\n",
+    "\n",
+    "Now is the time to update the remote repository with the new changes (aka to \"Push\").\n",
+    "\n",
+    "🚩 **Task:** Create a [Github personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens) for the https access security purposes. Either a fine-grained or a classic access token works. I recommend using a fine-grained token first. For permissions, select \"Contents\" and \"Workflows\" and change the access type to \"Read and write\" for both permissions.\n",
+    "\n",
+    "🚩 **Task:** Go back to the repository folder on Callysto Hub and enter the command below in the terminal:\n",
     "\n",
     "```\n",
     "git push\n",
     "```\n",
     "\n",
-    "Enter your Github username and the access token -- now the commits have been pushed to Github!\n",
+    "Enter your GitHub username and the access token. After the push is done, the new changes (`commit_test.ipynb`) will be available on Github for anyone to check.\n",
     "\n",
-    "### Link the Github repository to Zenodo\n",
+    "## 2 | [Zenodo](https://zenodo.org/)\n",
     "\n",
-    "At any time during the developement, you can hook the repository on Zenodo by going to Zenodo's \"Github\" settings:\n",
+    "Zenodo is an open repository designed to host a wide range of research materials, including but not limited to data, code, images, presentations, papers, and documentation. Zenodo is operated by [CERN](https://home.cern/) under the EU/EC [OpenAIRE program](https://www.openaire.eu/).\n",
+    "\n",
+    "### 🛠️ Zenodo upload\n",
+    "\n",
+    "🚩 **Task:** Register a [Zenodo](https://zenodo.org/) account. You can use your GitHub/ORCID account to register a Zenodo account if you have one or are creating one. [What is ORCID?](https://www.youtube.com/watch?v=a1Rijk_TMHA)\n",
+    "\n",
+    "🚩 **Task:** Log into Zenodo and click the plus icon at the upper right corner. Select \"New upload.\" Explore the data submission form and answer the following questions.\n",
+    "\n",
+    "❓ **Question:** What standard licenses does Zenodo provide? Do you need the copyright statement if you select a CC license?\n",
+    "\n",
+    "❓ **Question:** Who are creators? Who are contributors?\n",
+    "\n",
+    "### 🛠️ Zenodo x GitHub \n",
+    "\n",
+    "🚩 **Task:** Link your GitHub account to Zenodo. You should be able to do this under the settings menu. Once you are done, navigate to \"GitHub\" through the main dropdown menu and answer the following question.\n",
     "\n",
     "![Zenodo-scr1](figs/Zenodo-scr1.png)\n",
     "\n",
-    "Flip the switch to `on`, and you are done!\n",
+    "❓ **Question:** What are the three steps for your GitHub repository to be registered and archived with DOIs using Zenodo's service?\n",
     "\n",
-    "### Create a release\n",
+    "### If you want to create a release...\n",
     "\n",
-    "When you are ready to publish the repository, create a release on Github: \n",
+    "When you are ready to archive the repository on Zenodo, you can create a release on GitHub via this button:\n",
     "\n",
     "![Github-scr2](figs/Github-scr2.png)\n",
     "\n",
-    "We need to wait for a while for the release to be registered on Zenodo (which could take from a few minutes to a few days), but once it is done, you should be able to see your repository appeared as an upload with a DOI linked to it!"
+    "After a release is created, Zenodo will take a short while (a few minutes to a few days) to register it. Once it is done, you should be able to see your repository files on Zenodo with a DOI.\n",
+    "\n",
+    "\n",
+    "## 4 | More resources\n",
+    "\n",
+    "NCU's **Taiwan Polar Institute** (TaiPI) also has a data repository service called **TaiPI-Data**. \n",
+    "- Documentation: https://taipidata.ncu.edu.tw/docs/1-submission.html\n",
+    "- Submission portal: https://taipidata.ncu.edu.tw/submit\n",
+    "\n",
+    "<!-- During the upload, you'll also be asked to provide a license (if for open access) and deal with a DOI.\n",
+    "\n",
+    "A license can be given in two ways:\n",
+    "1. By choosing one in the dropdown menu\n",
+    "2. By including a license file in the uploaded zip file. -->\n",
+    "\n",
+    "<!-- Typically we want a new DOI to be associated with the new upload unless there has been other DOI issued to you. If you want to get the DOI before finalizing and publishing the upload, you can choose the \"reserve DOI\" option. **DOI registration is permanent!** You cannot remove/delete a DOI once it is given to your submission. I'll let you decide whether you try this functionaility or not during this session.\n",
+    "\n",
+    "If you have companian material (such as a journal paper or a conference presentation), you can fill in the related/alternate identifiers to link the upload to the companians.\n",
+    "\n",
+    "Don't forget to prepare the other metadata as much complete as possible! This determines how easy the upload to be reused by other people. \n",
+    " -->\n",
+    "\n",
+    "<!-- ### Link the Github repository to Zenodo\n",
+    "\n",
+    "At any time during the developement, you can hook the repository on Zenodo by going to Zenodo's \"Github\" settings:\n",
+    "\n",
+    "Flip the switch to `on`, and you are done! -->\n",
+    "\n",
+    "\n",
+    "<!-- 1. Understand how to archive data on Zenodo and make them FAIR-compatible.\n",
+    "2. Create a repository on Github and archive the content (which can be data or code) on Zenodo automatically whenever there is a release. -->\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2606b9bd-cc94-4b64-b6b5-3eef96ac21dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a50ff252-bd7e-405f-a9d7-92fc68be2704",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
